--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -338,7 +338,8 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Table.TD>
           <Table.TD>
             <Table.TText>
-              Determines whether menu content should overlap with the trigger.
+              Determines whether popover content should overlap with the
+              trigger.
             </Table.TText>
           </Table.TD>
         </Table.TR>
