--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -183,7 +183,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             <Table.TText>true</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`This function will be invoked when the menu is opened.`}</Table.TText>
+            <Table.TText>{`This function will be invoked when the tooltip is opened.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -199,7 +199,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             <Table.TText>-</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`This function will be invoked when menu is closed. It will also be called when the user attempts to close the menu via Escape key or backdrop press.`}</Table.TText>
+            <Table.TText>{`This function will be invoked when tooltip is closed. It will also be called when the user attempts to close the tooltip via Escape key or backdrop press.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -247,7 +247,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             <Table.TText>bottom left</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`Menu placement`}</Table.TText>
+            <Table.TText>{`Tooltip placement`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -299,7 +299,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             <Table.TText>-</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`Function that returns a React Element. This element will be used as a Trigger for the menu.`}</Table.TText>
+            <Table.TText>{`Function that returns a React Element. This element will be used as a Trigger for the tooltip.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -353,7 +353,8 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Table.TD>
           <Table.TD>
             <Table.TText>
-              Determines whether menu content should overlap with the trigger.
+              Determines whether tooltip content should overlap with the
+              trigger.
             </Table.TText>
           </Table.TD>
         </Table.TR>
