fix: added docs content

--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -320,6 +320,22 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
         <Table.TR>
           <Table.TD>
             <Table.TText>
+              <InlineCode>onValueChange</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`() => any`}</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>-</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`Callback to be invoked when Select value is changed.`}</Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
               <InlineCode>onClose</InlineCode>
             </Table.TText>
           </Table.TD>
