--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -395,17 +395,17 @@ The Examples section provides visual representations of the different variants o
         borderRadius: {
           control: 'select',
           options: [
+            '$none',
             '$sm',
             '$md',
             '$lg',
             '$xl',
-            '$none',
             '$xs',
             '$2xl',
             '$3xl',
             '$full',
           ],
-          default: '$sm',
+          default: '$none',
         },
         isDisabled: {
           control: 'boolean',
