fix: prority in props

--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -144,20 +144,20 @@ The Examples section provides visual representations of the different variants o
         Avatar,
       },
       argsType: {
-        Size: {
+        size: {
           control: 'select',
-          options: ['sm', 'md', 'lg', 'xl', 'xs', '2xl'],
-          default: 'lg',
+          options: ['xs', 'sm', 'md', 'lg', 'xl', '2xl'],
+          default: 'md',
         },
         borderRadius: {
           control: 'select',
           options: [
+            '$none',
+            '$xs',
             '$sm',
             '$md',
             '$lg',
             '$xl',
-            '$none',
-            '$xs',
             '$2xl',
             '$3xl',
             '$full',
