--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -43,7 +43,7 @@ Following is the default implementation of the **Menu** component without any ad
     metaData={{
       code: `
 <Menu
-  placement={"top"}
+  placement={"bottom"}
   trigger={(triggerProps) => {
     return (
       <Button {...triggerProps}>
@@ -54,21 +54,19 @@ Following is the default implementation of the **Menu** component without any ad
     );
   }}
 >
-  <Menu.Content>
-    <Menu.Item>
-      <Text>Arial</Text>
-    </Menu.Item>
-    <Menu.Item>
-      <Text>Nunito Sans</Text>
-    </Menu.Item>
-    <Menu.Item>
-      <Text>Roboto</Text>
-    </Menu.Item>
-    <Menu.Item>
-      <Text>Poppins</Text>
-    </Menu.Item>
-  </Menu.Content>
-  <Menu.Backdrop />
+<Menu.Backdrop />
+  <Menu.Item key="Arial">
+    <Menu.ItemLabel>Arial</Menu.ItemLabel>
+  </Menu.Item>
+  <Menu.Item key="Nunito Sans">
+    <Menu.ItemLabel>Nunito Sans</Menu.ItemLabel>
+  </Menu.Item>  
+  <Menu.Item key="Roboto">
+    <Menu.ItemLabel>Roboto</Menu.ItemLabel>
+  </Menu.Item>
+  <Menu.Item key="Poppins">
+    <Menu.ItemLabel>Poppins</Menu.ItemLabel>
+  </Menu.Item>
 </Menu>
 `,
       transformCode: (code) => {
@@ -110,14 +108,9 @@ The structure provided below can help you identify and understand a Menu compone
 export default () => (
   <Menu>
     <Menu.Backdrop />
-    <Menu.Content>
-      <Menu.Group>
-        <Menu.GroupTitle></Menu.GroupTitle>
-        <Menu.Item>
-          <Text></Text>
-        </Menu.Item>
-      </Menu.Group>
-    </Menu.Content>
+    <Menu.Item key="MenuItem">
+      <Menu.ItemLabel>MenuItem</Menu.ItemLabel>
+    </Menu.Item>
   </Menu>
 );
 ```
@@ -208,22 +201,6 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
         <Table.TR>
           <Table.TD>
             <Table.TText>
-              <InlineCode>closeOnOverlayClick</InlineCode>
-            </Table.TText>
-          </Table.TD>
-          <Table.TD>
-            <Table.TText>bool</Table.TText>
-          </Table.TD>
-          <Table.TD>
-            <Table.TText>true</Table.TText>
-          </Table.TD>
-          <Table.TD>
-            <Table.TText>{`closes menu when clicked outside`}</Table.TText>
-          </Table.TD>
-        </Table.TR>
-        <Table.TR>
-          <Table.TD>
-            <Table.TText>
               <InlineCode>onOpen</InlineCode>
             </Table.TText>
           </Table.TD>
@@ -269,6 +246,44 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             <Table.TText>{`Whether the menu is opened. Useful for controlling the open state.`}</Table.TText>
           </Table.TD>
         </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>offset</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>number</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>-</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>
+              The additional offset applied along the main axis between the
+              element and its trigger element.
+            </Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>crossOffset</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>number</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>-</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>
+              The additional offset applied along the cross axis between the
+              element and its trigger element.
+            </Table.TText>
+          </Table.TD>
+        </Table.TR>
       </Table.TBody>
     </Table>
   </TableContainer>
@@ -278,21 +293,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 Contains all backdrop related layout style props and actions. It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
 
-#### Menu.Content
-
-Contains all content related layout style props and actions. It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
-#### Menu.Group
-
-Contains all group related layout style props and actions. It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
-#### Menu.GroupTitle
-
-Contains all button related layout style props and actions. It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
 #### Menu.Item
 
 Contains all button related layout style props and actions. It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+#### Menu.ItemLabel
+
+Contains all button related layout style props and actions. It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
 
 ### Features
 
@@ -311,10 +318,14 @@ The following are the lists of all the libraries and packages the component reli
 
 - `@gluestack-ui/overlay`
 - `@gluestack-ui/react-native-aria`
-- `@react-native-aria/overlays`
-- `@react-native-aria/utils`
+- `@gluestack-ui/transitions`
+- `@gluestack-ui/utils`
+- `@gluestack-ui/hooks`
 - `@react-native-aria/focus`
-- `react-native-svg`
+- `@react-native-aria/menu`
+- `@react-native-aria/overlays`
+- `react-stately`
+- `@react-stately/utils`
 
 ## Advanced
 
@@ -332,11 +343,9 @@ Default styling of all these components can be found in the `components/core/men
 // import the styles
 import {
   Root,
-  Backdrop,
-  Content,
-  Group,
-  GroupTitle,
   Item,
+  Label,
+  Backdrop,
 } from '../components/core/menu/styled-components';
 
 // import the createMenu function
@@ -345,20 +354,17 @@ import { createMenu } from '@gluestack-ui/menu';
 // Understanding the API
 const Menu = createMenu({
   Root,
-  Backdrop,
-  Content,
-  Group,
-  GroupTitle,
   Item,
+  Label,
+  Backdrop,
 });
 
 // Using the menu component
 export default () => (
-  <Menu.Group>
-    <Menu>
-      <Menu.Text />
-      <Menu.Spinner />
-    </Menu>
-  </Menu.Group>
+  <Menu>
+    <Menu.Item>
+      <Menu.ItemLabel />
+    </Menu.Item>
+  </Menu>
 );
 ```
