--- a/example/storybook/src/components/Feedback/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Toast/index.stories.mdx
@@ -52,7 +52,7 @@ function App() {
                 <Toast nativeId={id}>
                   <Toast.Title sx={{
                     _dark: {
-                      color: '$white'
+                      color: 'white'
                     }
                   }}>Hello World Toast {id}</Toast.Title>
                 </Toast>
