--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -133,50 +133,46 @@ The avatar group allows users to group avatars and display them in a horizontal 
     showArgsController={false}
     metaData={{
       code: `
-<HStack
-  space="md"
-  h="100%"
-  justifyContent="center"
-  alignItems="center">
-  <Avatar.Group>
-    <Avatar size="$md">
-      <Avatar.FallbackText>AB</Avatar.FallbackText>
-      <Avatar.Image
-        source={{
-          uri: 'https://images.unsplashGVufDB8fHx8&auto=format&fit=crop&w=687&q=80',
-        }}
-      />
-      <Avatar.Badge />
-    </Avatar>
-    <Avatar size="$md">
-      <Avatar.FallbackText>AB</Avatar.FallbackText>
-      <Avatar.Image
-        source={{
-          uri: 'https://images.unsplash.com/photo-1603415526960-f7e0328c63b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80',
-        }}
-      />
-      <Avatar.Badge />
-    </Avatar>
-    <Avatar size="$md">
-      <Avatar.FallbackText>AB</Avatar.FallbackText>
-      <Avatar.Image
-        source={{
-        uri: 'https://images.unsplash.com/photo-1614289371518-722f2615943d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80',
-        }}
-      />
-      <Avatar.Badge />
-    </Avatar>
-    <Avatar size="$md">
-      <Avatar.FallbackText>AB</Avatar.FallbackText>
-      <Avatar.Image
-        source={{
-          uri: 'https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80',
-        }}
-      />
-      <Avatar.Badge />
-    </Avatar>
-  </Avatar.Group>
-</HStack>
+  <HStack space="md" h="100%" justifyContent="center" alignItems="center">
+        <Avatar.Group>
+          <Avatar size="md">
+            <Avatar.FallbackText>John Doe</Avatar.FallbackText>
+            <Avatar.Image
+              source={{
+                uri: 'https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80',
+              }}
+            />
+            <Avatar.Badge />
+          </Avatar>
+          <Avatar size="md">
+            <Avatar.FallbackText>John Doe</Avatar.FallbackText>
+            <Avatar.Image
+              source={{
+                uri: 'https://images.unsplash.com/photo-1603415526960-f7e0328c63b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80',
+              }}
+            />
+            <Avatar.Badge />
+          </Avatar>
+          <Avatar size="md">
+            <Avatar.FallbackText>John Doe</Avatar.FallbackText>
+            <Avatar.Image
+              source={{
+                uri: 'https://images.unsplash.com/photo-1614289371518-722f2615943d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80',
+              }}
+            />
+            <Avatar.Badge />
+          </Avatar>
+          <Avatar size="md">
+            <Avatar.FallbackText>John Doe</Avatar.FallbackText>
+            <Avatar.Image
+              source={{
+                uri: 'https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80',
+              }}
+            />
+            <Avatar.Badge />
+          </Avatar>
+        </Avatar.Group>
+      </HStack>
 `,
       transformCode: (code) => {
         return transformedCode(code);
