--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -44,22 +44,24 @@ function Example(){
   const [values, setValues] = React.useState('veg');
   return (
   <Radio.Group value={values} onChange={setValues}>
-    <Radio value="veg" mb="$2">
-      <Radio.Indicator>
-        <Radio.Icon>
-            <CircleIcon />
-        </Radio.Icon>
-      </Radio.Indicator>
-      <Radio.Label>Veg</Radio.Label>
-    </Radio>
-      <Radio value="non-veg">
-      <Radio.Indicator>
-        <Radio.Icon>
-            <CircleIcon />
-        </Radio.Icon>
-      </Radio.Indicator>
-      <Radio.Label>Non-veg</Radio.Label>
-    </Radio>
+    <VStack space="sm">
+      <Radio value="veg">
+        <Radio.Indicator>
+          <Radio.Icon>
+              <CircleIcon />
+          </Radio.Icon>
+        </Radio.Indicator>
+        <Radio.Label>Veg</Radio.Label>
+      </Radio>
+        <Radio value="non-veg">
+        <Radio.Indicator>
+          <Radio.Icon>
+              <CircleIcon />
+          </Radio.Icon>
+        </Radio.Indicator>
+        <Radio.Label>Non-veg</Radio.Label>
+      </Radio>
+    </VStack>
   </Radio.Group>)
 }
 `,
@@ -67,6 +69,7 @@ function Example(){
         Wrapper,
         CircleIcon,
         Radio,
+        VStack,
       },
       argsType: {},
     }}
@@ -422,36 +425,38 @@ Radio component comes in different sizes, such as `sm,` `md`, and `lg`, allowing
     metaData={{
       code: `
 <Radio.Group alignItems="start">
-  <Radio size="sm" value="sm" mb="$2">
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>Small size</Radio.Label>
-  </Radio>
-  <Radio size="md" value="md" mb="$2">
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>Medium size</Radio.Label>
-  </Radio>
-  <Radio size="lg" value="lg" >
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>Large size</Radio.Label>
-  </Radio>
+  <VStack space="sm">
+    <Radio size="sm" value="sm">
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>Small size</Radio.Label>
+    </Radio>
+    <Radio size="md" value="md">
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>Medium size</Radio.Label>
+    </Radio>
+    <Radio size="lg" value="lg" >
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>Large size</Radio.Label>
+    </Radio>
+  </VStack>
 </Radio.Group>
 `,
       transformCode: (code) => {
         return transformedCode(code);
       },
-      scope: { Radio, Wrapper, GluestackText: Text, CircleIcon },
+      scope: { Radio, VStack, Wrapper, GluestackText: Text, CircleIcon },
       argsType: {},
     }}
   />
@@ -468,44 +473,46 @@ Radio component comes in different states, such as invalid, disabled, readonly, 
     metaData={{
       code: `
 <Radio.Group>
-  <Radio isInvalid={true}  value="invalid" mb="$2">
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>isInvalid</Radio.Label>
-  </Radio>
-  <Radio isReadOnly={true} value="readonly" mb="$2">
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>isReadOnly</Radio.Label>
-  </Radio>
-  <Radio isDisabled={true}  value="disabled" mb="$2">
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>isDisabled</Radio.Label>
-  </Radio>
-  <Radio isChecked={true} value="checked" mb="$2">
-    <Radio.Indicator>
-      <Radio.Icon>
-        <CircleIcon />
-      </Radio.Icon>
-    </Radio.Indicator>
-    <Radio.Label>isChecked</Radio.Label>
-  </Radio>
+  <VStack space="sm">
+    <Radio isInvalid={true}  value="invalid">
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>isInvalid</Radio.Label>
+    </Radio>
+    <Radio isReadOnly={true} value="readonly">
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>isReadOnly</Radio.Label>
+    </Radio>
+    <Radio isDisabled={true}  value="disabled">
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>isDisabled</Radio.Label>
+    </Radio>
+    <Radio isChecked={true} value="checked">
+      <Radio.Indicator>
+        <Radio.Icon>
+          <CircleIcon />
+        </Radio.Icon>
+      </Radio.Indicator>
+      <Radio.Label>isChecked</Radio.Label>
+    </Radio>
+  </VStack>
 </Radio.Group>
 `,
       transformCode: (code) => {
         return transformedCode(code);
       },
-      scope: { Radio, Wrapper, GluestackText: Text, CircleIcon },
+      scope: { Radio, VStack, Wrapper, GluestackText: Text, CircleIcon },
       argsType: {},
     }}
   />
@@ -526,36 +533,38 @@ const [values, setValues] = React.useState('Label 1');
 return (
 <Wrapper>
   <Radio.Group value={values} onChange={setValues}>
-    <Radio value="Label 1"  mb="$2">
-      <Radio.Indicator>
-        <Radio.Icon>
-          <CircleIcon />
-        </Radio.Icon>
-      </Radio.Indicator>
-      <Radio.Label>Label 1</Radio.Label>
-    </Radio>
-    <Radio value="Label 2" mb="$2">
-      <Radio.Indicator>
-        <Radio.Icon>
-          <CircleIcon />
-        </Radio.Icon>
-      </Radio.Indicator>
-      <Radio.Label>Label 2</Radio.Label>
-    </Radio>
-    <Radio value="Label 3" mb="$2">
-      <Radio.Indicator>
-        <Radio.Icon>
-          <CircleIcon />
-        </Radio.Icon>
+    <VStack space="sm">
+      <Radio value="Label 1">
+        <Radio.Indicator>
+          <Radio.Icon>
+            <CircleIcon />
+          </Radio.Icon>
         </Radio.Indicator>
-      <Radio.Label>Label 3</Radio.Label>
-    </Radio>
+        <Radio.Label>Label 1</Radio.Label>
+      </Radio>
+      <Radio value="Label 2">
+        <Radio.Indicator>
+          <Radio.Icon>
+            <CircleIcon />
+          </Radio.Icon>
+        </Radio.Indicator>
+        <Radio.Label>Label 2</Radio.Label>
+      </Radio>
+      <Radio value="Label 3">
+        <Radio.Indicator>
+          <Radio.Icon>
+            <CircleIcon />
+          </Radio.Icon>
+          </Radio.Indicator>
+        <Radio.Label>Label 3</Radio.Label>
+      </Radio>
+    </VStack>
   </Radio.Group>
 </Wrapper>
 );
 };
 `,
-scope: { Radio, Wrapper, Center, CircleIcon, useState },
+scope: { Radio, VStack,  Wrapper, Center, CircleIcon, useState },
 argsType: {},
 }}
 />
