--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -398,7 +398,7 @@ The following are the lists of all the libraries and packages the component reli
 
 The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
 
-### Checkbox
+#### Checkbox
 
 <AppProvider>
   <CodePreview
@@ -632,7 +632,7 @@ The Examples section provides visual representations of the different variants o
   />
 </AppProvider>
 
-### Form Control
+#### Form Control
 
 #### Checkbox Sizes
 
