--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -466,13 +466,14 @@ The Input with Icons is a variation of the Input component that displays icons n
     showComponentRenderer={true}
     showArgsController={false}
     metaData={{
-      code: `<Input>
+      code: `
+        <Input>
           <Input.Icon pl="$3">
-          <Icon as={SearchIcon} />
+            <Icon as={SearchIcon} />
           </Input.Icon>
-            <Input.Input
-              placeholder="Search"
-            /> 
+          <Input.Input
+            placeholder="Search"
+          /> 
         </Input>`,
   transformCode: (code) => {
   return transformedCode(code);
