--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -250,7 +250,7 @@ The following are the lists of all the libraries and packages the component reli
 
 The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
 
-#### FAB With Icon
+#### FAB with Icon
 
 Icons can be used inside Fab component.
 
@@ -339,7 +339,7 @@ Icons can be used inside Fab component.
   />
 </AppProvider>
 
-#### FAB with icon and text
+#### FAB with Icon and Text
 
 Icons can be used inside Fab component.
 
