--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -409,36 +409,38 @@ Checkbox component comes in different sizes, such as `sm,` `md`, and `lg`, allow
     metaData={{
       code: `
 <Center>
-  <Checkbox size="sm">
-    <Checkbox.Indicator>
-      <Checkbox.Icon>
-        <CheckIcon />
-      </Checkbox.Icon>
-    </Checkbox.Indicator>
-    <Checkbox.Label>Label</Checkbox.Label>
-  </Checkbox>
-  <Checkbox size="md">
-    <Checkbox.Indicator>
-      <Checkbox.Icon>
-        <CheckIcon />
-      </Checkbox.Icon>
-    </Checkbox.Indicator>
-    <Checkbox.Label>Label</Checkbox.Label>
-  </Checkbox>
-  <Checkbox size="lg">
-    <Checkbox.Indicator>
-      <Checkbox.Icon>
-        <CheckIcon />
-      </Checkbox.Icon>
-    </Checkbox.Indicator>
-    <Checkbox.Label>Label</Checkbox.Label>
-  </Checkbox>
+  <VStack space="md" alignItems="flex-start">
+    <Checkbox size="sm">
+      <Checkbox.Indicator>
+        <Checkbox.Icon>
+          <CheckIcon />
+        </Checkbox.Icon>
+      </Checkbox.Indicator>
+      <Checkbox.Label>Label</Checkbox.Label>
+    </Checkbox>
+    <Checkbox size="md">
+      <Checkbox.Indicator>
+        <Checkbox.Icon>
+          <CheckIcon />
+        </Checkbox.Icon>
+      </Checkbox.Indicator>
+      <Checkbox.Label>Label</Checkbox.Label>
+    </Checkbox>
+    <Checkbox size="lg">
+      <Checkbox.Indicator>
+        <Checkbox.Icon>
+          <CheckIcon />
+        </Checkbox.Icon>
+      </Checkbox.Indicator>
+      <Checkbox.Label>Label</Checkbox.Label>
+    </Checkbox>
+  </VStack>
 </Center>
 `,
       transformCode: (code) => {
         return transformedCode(code);
       },
-      scope: { Checkbox, Wrapper, Center, CheckIcon },
+      scope: { Checkbox, Wrapper, Center, CheckIcon, VStack },
       argsType: {},
     }}
   />
@@ -454,7 +456,7 @@ Checkbox component comes in different states, such as invalid, disabled, readonl
     showArgsController={false}
     metaData={{
       code: `
-<VStack alignItems="$start">
+<VStack alignItems="$start" space="sm">
   <Checkbox isInvalid={true}>
     <Checkbox.Indicator>
       <Checkbox.Icon>
@@ -512,48 +514,50 @@ function CheckboxExample(){
   const [values, setValues] = React.useState([]);
   return (
     <Wrapper>
-      <Center>
+      <Center>      
         <Checkbox.Group
           value={values}
           onChange={setValues}
         >
-          <Checkbox
-           isDisabled={true}
-            value="Label 1"
-            aria-label="Label 1"
-            accessibilityLabel="Checkbox"
-            onChange={(isSelected) =>
-            console.log("hello")
-            }
-          >
-            <Checkbox.Indicator>
-              <Checkbox.Icon>
-                <CheckIcon />
-              </Checkbox.Icon>
-            </Checkbox.Indicator>
-            <Checkbox.Label>Label 1</Checkbox.Label>
-          </Checkbox>
-          <Checkbox
-            aria-label="Label 2"
-            value="Label 2"
-            accessibilityLabel="Checkbox"
-            onChange={(isSelected) =>console.log("hello")
-            }
-          >
-            <Checkbox.Indicator>
-              <Checkbox.Icon>
-                <CheckIcon />
-              </Checkbox.Icon>
-            </Checkbox.Indicator>
-            <Checkbox.Label>Label 2</Checkbox.Label>
-          </Checkbox>
+          <VStack space="sm">
+            <Checkbox
+            isDisabled={true}
+              value="Label 1"
+              aria-label="Label 1"
+              accessibilityLabel="Checkbox"
+              onChange={(isSelected) =>
+              console.log("hello")
+              }
+            >
+              <Checkbox.Indicator>
+                <Checkbox.Icon>
+                  <CheckIcon />
+                </Checkbox.Icon>
+              </Checkbox.Indicator>
+              <Checkbox.Label>Label 1</Checkbox.Label>
+            </Checkbox>
+            <Checkbox
+              aria-label="Label 2"
+              value="Label 2"
+              accessibilityLabel="Checkbox"
+              onChange={(isSelected) =>console.log("hello")
+              }
+            >
+              <Checkbox.Indicator>
+                <Checkbox.Icon>
+                  <CheckIcon />
+                </Checkbox.Icon>
+              </Checkbox.Indicator>
+              <Checkbox.Label>Label 2</Checkbox.Label>
+            </Checkbox>
+          </VStack>
         </Checkbox.Group>
       </Center>
     </Wrapper>
   );
 };
 `,
-      scope: { Checkbox, Wrapper, Center, CheckIcon },
+      scope: { Checkbox, Wrapper, Center, CheckIcon, VStack },
       argsType: {},
     }}
   />
